Update project configuration and dependencies; renamed project to "mavia-ai". Added new tools and improved agent functionality in backend. Introduced Gemini client wrapper for enhanced AI capabilities and integrated new technical analysis features for gold trading.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,66 +1,118 @@
 [project]
-name = "digital-co-worker"
+name = "mavia-ai"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
-    "langchain>=0.3.26",
-    "langchain-openai>=0.3.27",
-    "langgraph>=0.5.0",
-    "markitdown[docx,pdf,pptx]>=0.1.2",
-    "pymupdf4llm>=0.0.25",
-    "pyyaml>=6.0",
-    "python-dotenv>=1.0.0",
-    "markdown>=3.8.2",
-    "pandas>=2.3.0",
-    "pypdf2>=3.0.1",
-    "flashrank>=0.2.10",
-    "qdrant-client>=1.14.3",
-    "sentence-transformers>=5.0.0",
-    "pydantic-settings>=2.10.1",
-    "einops>=0.8.1",
-    "pdfplumber>=0.11.7",
-    "tabulate>=0.9.0",
-    "uvicorn>=0.35.0",
-    "fastapi>=0.115.14",
-    "python-multipart>=0.0.20",
+    "aiohttp>=3.12.15",
+    "airports-py>=2.0.0",
+    "airportsdata>=20250909",
+    "amadeus>=12.0.0",
+    "apscheduler>=3.11.0",
+    "azure-storage-blob>=12.25.1",
+    "beautifulsoup4>=4.13.3",
     "black>=25.1.0",
-    "isort>=6.0.1",
-    "docling>=2.40.0",
-    "numpy<2.0",
-    "boto3>=1.39.4",
-    "tempmail-python>=2.3.3",
-    "tempmail-lol>=3.0.0",
-    "temp-mail>=0.2",
-    "pymongo>=4.13.2",
-    "realtimestt>=0.3.104",
-    "pyannote-audio>=3.3.2",
-    "speechbrain>=1.0.3",
-    "langchain-anthropic>=0.3.18",
-    "langchain-google-genai>=2.1.9",
-    "dvc[gs]>=3.62.0",
-    "google-api-python-client>=2.179.0",
-    "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.2",
-    "whisper-openai>=1.0.0",
+    "boto3>=1.40.40",
+    "bs4>=0.0.2",
+    "byteplus-python-sdk-v2>=3.0.18",
+    "cachetools>=5.5.1",
+    "ccxt>=4.5.16",
+    "cohere>=5.14.2",
+    "composio-langchain==0.7.7",
+    "cryptocompare==0.7.6",
+    "cryptodatapy>=0.2.10",
+    "edge-tts>=7.2.1",
+    "einops==0.8.1",
+    "espeakng-loader>=0.2.4",
+    "fake-useragent>=2.2.0",
+    "fastapi==0.115.6",
+    "fastembed>=0.6.1",
     "faster-whisper>=1.1.1",
-    "llvmlite>=0.40",
-    "numba>=0.57",
+    "flashrank>=0.2.10",
+    "flask>=3.1.0",
+    "gdeltdoc==1.5.0",
+    "google-auth==2.37.0",
+    "google-genai>=1.31.0",
+    "google-search-results>=2.4.2",
+    "googletrans==4.0.2",
+    "gpt-researcher>=0.13.3",
+    "gql>=4.0.0",
+    "isort>=6.0.1",
+    "json-repair>=0.41.1",
+    "keyboard>=0.13.5",
+    "kokoro[all]>=0.9.4",
+    "langchain>=1.0.3",
+    "langchain-anthropic>=1.0.1",
+    "langchain-google-genai>=3.0.1",
+    "langchain-mcp-adapters>=0.1.12",
+    "langchain-tavily>=0.2.13",
+    "langfuse>=3.9.0",
+    "langgraph==1.0.2",
+    "lingua-language-detector==1.4.0",
+    "lxml>=5.3.2",
+    "markdown>=3.8",
+    "mcp-use>=1.2.8",
+    "misaki[en]>=0.9.4",
+    "motor==3.6.0",
+    "mysql-connector-python==9.2.0",
+    "ollama>=0.5.3",
     "openai-whisper>=20250625",
-    "librosa>=0.11.0",
-    "scipy>=1.11.0",
-    "soundfile>=0.12.1",
-    "webrtcvad>=2.0.10",
+    "opencv-python>=4.10",
+    "openpyxl>=3.1.5",
+    "pandas<2.0",
+    "phonemizer>=3.3.0",
+    "phonemizer-fork>=3.3.2",
+    "playwright>=1.51.0",
+    "polars>=1.35.1",
+    "psutil==7.0.0",
+    "psycopg2-binary==2.9.10",
+    "pyairports",
+    "pyasn1-modules==0.4.1",
+    "pydantic==2.10.4",
+    "pyjwt==2.10.1",
+    "pymongo==4.9.1",
+    "pymysql>=1.1.2",
+    "pypdf2>=3.0.1",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-playwright>=0.7.0",
+    "python-binance==1.0.25",
+    "python-dotenv==1.0.1",
+    "python-twitter-v2==0.9.2",
+    "pyttsx3>=2.99",
+    "qdrant-client>=1.15.1",
+    "realtimestt>=0.3.104",
+    "redis>=6.2.0",
+    "scrapegraph-py>=1.12.0",
+    "selenium>=4.33.0",
+    "selenium-stealth>=1.0.6",
+    "sentence-transformers>=5.1.2",
+    "snscrape>=0.7.0.20230622",
     "sounddevice>=0.5.2",
+    "soundfile>=0.13.1",
+    "sqlalchemy==2.0.35",
+    "ta>=0.11.0",
+    "tavily-python>=0.7.2",
+    "telethon>=1.41.2",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "tts>=0.20.0",
+    "tweepy>=4.15.0",
+    "undetected-chromedriver>=3.5.5",
+    "uvicorn==0.32.1",
+    "vertexai>=1.43.0",
+    "weasyprint>=65.1",
+    "webrtcvad>=2.0.10",
+    "whisper-openai>=1.0.0",
+    "xai-sdk>=1.1.0",
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-cpu" }
-torchvision = { index = "pytorch-cpu" }
-torchaudio = { index = "pytorch-cpu" }
+blpapi-mcp = { git = "https://github.com/djsamseng/bloomberg-mcp" }
+pyairports = { git = "https://github.com/NICTA/pyairports.git" }
 
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
+[dependency-groups]
+dev = [
+    "pytest>=8.4.0",
+]
