--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ backend/models/
 
 backend/models/
 frontend/node_modules/
+backend/.env
+backend/dulcet-order-476509-q4-3c7d878c95c2.json
+backend/dulcet-order-476509-q4-7b210ba5c8a4.json
