--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ frontend/node_modules/
 backend/.env
 backend/dulcet-order-476509-q4-3c7d878c95c2.json
 backend/dulcet-order-476509-q4-7b210ba5c8a4.json
+.claude/.settings.json
