Update frontend components and routing for enhanced user experience. Modify App routing to redirect unauthenticated users from the login page to the dashboard. Refactor ProtectedRoute to remove unnecessary authentication checks. Improve AIStudio card design with updated styles and responsive elements. Update Navbar styles for better visual appeal and consistency across the application.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ backend/.env
 backend/dulcet-order-476509-q4-3c7d878c95c2.json
 backend/dulcet-order-476509-q4-7b210ba5c8a4.json
 .claude/.settings.json
+.vercel
