--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ backend/dulcet-order-476509-q4-3c7d878c95c2.json
 backend/dulcet-order-476509-q4-7b210ba5c8a4.json
 .claude/.settings.json
 .vercel
+frontend/.env
