--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,49 +1,46 @@
-# Use the base image with uv and Python 3.12 (align comment + tag)
-FROM ghcr.io/astral-sh/uv:python3.12-bookworm
+FROM ghcr.io/astral-sh/uv:python3.11-bookworm
 
 WORKDIR /app
 
-# ---- System deps (use BuildKit cache mounts) ----
-RUN --mount=type=cache,target=/var/cache/apt \
-    --mount=type=cache,target=/var/lib/apt \
-    apt-get update \
- && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-    ca-certificates curl gnupg git \
-    gcc g++ make pkg-config python3-dev \
-    libfreetype6-dev libpng-dev \
-    portaudio19-dev libportaudio2 libasound2-dev \
-    ffmpeg \
-    curl \
-    redis-server openssh-server cron \
- && rm -rf /var/lib/apt/lists/*
+# Environment variables for Python
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    UV_LINK_MODE=copy \
+    PATH="/app/.venv/bin:${PATH}" \
+    PYTHONPATH=.
 
-# ---- Node.js 20 (only if you actually need it at runtime) ----
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
- && apt-get install -y --no-install-recommends nodejs \
- && node -v && npm -v && npx --version
+# Install system dependencies
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+       build-essential \
+       libpq-dev \
+       curl \
+       ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
-# ---- Python deps (cache uv to avoid rebuilding wheels) ----
+# Copy dependency files first for better layer caching
 COPY pyproject.toml uv.lock ./
+
+# Install Python dependencies
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --frozen --no-dev
 
-# ---- App code last for better caching ----
-COPY . .
+# Copy application code
+COPY src ./src
+COPY main.py ./main.py
 
-# ---- Logs dir ----
+# Copy .env file (will be in the image, can also mount via volume)
+COPY .env ./.env
+
+# Create logs directory
 RUN mkdir -p logs && chmod 777 logs
 
-# ---- Env / PATH ----
-ENV PYTHONPATH=. \
-    PATH="/app/.venv/bin:${PATH}"
+# Expose the application port
+EXPOSE 8081
 
-EXPOSE ${PORT:-3035}
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD curl -fsS http://127.0.0.1:8081/ || exit 1
 
-# Add health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:${PORT:-3035}/ || exit 1
-
-# TIP: install uvicorn[standard] in your pyproject for uvloop+httptools speedup
-# Start Redis in the same container (dev-friendly) and run the app with faster stack
-CMD ["sh", "-c", "redis-server --daemonize yes && uv run python -m uvicorn src.main:app --host 0.0.0.0 --port ${PORT:-3035} --reload"]
-
+# Run the application
+CMD ["uv", "run", "python", "-m", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8081"]
