--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,13 +5,27 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: gbnx_backend
+    container_name: gbnx_gold_trader_backend
     ports:
-      - "3035:3035"
-    env_file:
-      - .env
+      - "8081:8081"
+    environment:
+      # You can override env vars here or use the .env file in the image
+      - PORT=8081
     volumes:
+      # Mount logs directory for persistent logs
       - ./logs:/app/logs
-    restart: always
-    # Healthcheck is already defined in Dockerfile, but we can override or rely on it.
-    # The Dockerfile starts redis and the app together.
+      # Optional: Mount .env file if you want to change it without rebuilding
+      - ./.env:/app/.env:ro
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - gbnx-network
+
+networks:
+  gbnx-network:
+    driver: bridge
