Add TODO and GPU Dependencies Removal Summary files; update pyproject.toml for CPU-only PyTorch support

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pymongo>=4.14.0",
     "pyyaml>=6.0.2",
+    "torch>=2.0.0",
     "sentence-transformers>=5.1.0",
     "uvicorn>=0.35.0",
     "litellm>=1.56.1",
@@ -50,6 +51,17 @@ dependencies = [
     "itsdangerous>=2.2.0",
     "pydantic-ai>=1.47.0",
 ]
+
+[tool.uv]
+index-url = "https://pypi.org/simple"
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cpu" }
 
 [tool.isort]
 profile = "black"
