Add BuildKit support and optimize Docker deployment process. Introduce a new Dockerfile for BuildKit compatibility, update the main Dockerfile to remove BuildKit-specific options, and enhance the deploy script to automatically detect and utilize BuildKit if available. Additionally, add comprehensive documentation for BuildKit usage and deployment strategies.

--- a/backend/Dockerfile.buildkit
+++ b/backend/Dockerfile.buildkit
@@ -21,8 +21,9 @@ RUN apt-get update \
 # Copy dependency files first for better layer caching
 COPY pyproject.toml uv.lock ./
 
-# Install Python dependencies (no cache to avoid BuildKit requirement)
-RUN uv sync --frozen --no-dev --no-cache
+# Install Python dependencies with BuildKit cache mount
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen --no-dev
 
 # Copy application code
 COPY src ./src
