Refactor Docker setup to use /data directory for persistent storage
- Updated docker-compose.yml to mount the /data directory for persistent data instead of logs.
- Changed working directory in Dockerfiles to /data and adjusted environment variables accordingly.
- Created necessary directories under /data for logs, cache, uploads, and temp, ensuring proper permissions are set.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       # You can override env vars here or use the .env file in the image
       - PORT=8081
     volumes:
-      # Mount logs directory for persistent logs
-      - ./logs:/app/logs
+      # Mount /data directory for all persistent data
+      - ./data:/data
       # Optional: Mount .env file if you want to change it without rebuilding
-      - ./.env:/app/.env:ro
+      - ./.env:/data/.env:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8081/"]
