--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,13 @@
 FROM ghcr.io/astral-sh/uv:python3.11-bookworm
 
-WORKDIR /app
+WORKDIR /data
 
 # Environment variables for Python
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     UV_LINK_MODE=copy \
-    PATH="/app/.venv/bin:${PATH}" \
-    PYTHONPATH=.
+    PATH="/data/.venv/bin:${PATH}" \
+    PYTHONPATH=/data
 
 # Install system dependencies
 RUN apt-get update \
@@ -31,8 +31,9 @@ COPY main.py ./main.py
 # Copy .env file (will be in the image, can also mount via volume)
 COPY .env ./.env
 
-# Create logs directory
-RUN mkdir -p logs && chmod 777 logs
+# Create all necessary directories under /data
+RUN mkdir -p /data/logs /data/cache /data/uploads /data/temp && \
+    chmod -R 777 /data/logs /data/cache /data/uploads /data/temp
 
 # Expose the application port
 EXPOSE 8081
