Update Cloudflare Tunnel setup documentation and docker-compose configuration
- Revise markdown documentation to reflect new deployment steps for Cloudflare Tunnel using Docker
- Add cloudflared service to docker-compose.yml for seamless integration with the backend
- Update frontend .env.production file to use the new backend API URL with Cloudflare Tunnel
- Enhance management instructions for the tunnel, including commands for status, restart, and logs

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -32,6 +32,16 @@ services:
     networks:
       - gbnx-network
 
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: gbnx_cloudflared
+    command: tunnel --no-autoupdate --url http://backend:8081
+    depends_on:
+      - backend
+    networks:
+      - gbnx-network
+    restart: unless-stopped
+
 networks:
   gbnx-network:
     driver: bridge
