--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,3 @@
 # Production environment variables
-# Update this URL after setting up Cloudflare Tunnel or ngrok
-# IMPORTANT: Use https:// (not http://) to enable WSS WebSocket
-VITE_BACKEND_API_BASE_URL=https://your-tunnel-url-here.trycloudflare.com
+# Using Cloudflare as reverse proxy for SSL/TLS
+VITE_BACKEND_API_BASE_URL=https://api.azaps.net
